v2.0.0
 - Drop support for ruby 1.9.3, require a minimum of ruby 2.2
 - Upgrade to Rspec 3
 - Upgrade all dependencies to current stable versions

v1.4.27
 - Added `dictionary_version` configuration option for RESO requests

v1.4.26
 - added `unread` and `unread_count` methods to `Message`

v1.4.25
 - add request_id reader to error and response classes
 - log request_id on successful requests (debug level)
 - support request_id_chain as a configurable option
 - if configured, pass request_id_chain to server as `X-Request-Id-Chain` header

v1.4.24
 - added method for /propertytypes/all

v1.4.23
 - added ListingMetaTranslations model

v1.4.22
 - added Rule model

v1.4.21
 - added IncompleteListing model

v1.4.20
 - added destroy class method to Destroyable

v1.4.19
 - create SparkQLErrors attribute for SparkApi::Response and populate when present
 - create Errors attribute for SparkApi::Response and populate when present
 - create SparkApi::Request option `full_response` that allows methods to return object instead of body only.

v1.4.18
 - include the errors from the response in the instance of ClientErrors

v1.4.17
 - use '/flexmls/listings' for PUT

v1.4.16
 - Added method for /fields/order/settings to Fields class

v1.4.15
 - Add OData support

v1.4.14
 - fixed duplicate requests in NewsFeedMeta

v1.4.13
 - added SystemInfoSearch model

v1.4.12
- updated 'delete_photos' in SparkApi::Models::Listing to return the response from the API instead of a boolean value.

v1.4.11
- add 'delete_photos' to SparkApi::Models::Listing to enable deleting a batch of photos.

v1.4.10
 - add `id` method to SparkApi::Models::Base as a more familiar alias of `Id`
 - add SharedLink and EmailLink models, extracted from FBS internal code

v1.4.9
 - add AccountReport and AccountRoster models

v1.4.8
 - added ListingCart#add_listings

v1.4.7
 - store 'D' attribute in responses
 
v1.4.6
 - Added Idx model
 
v1.4.5